[gd_scene load_steps=5 format=3 uid="uid://don1dyvu4dkv8"]

[ext_resource type="Script" uid="uid://b1tsougdq3xbs" path="res://ui/main_box/main__ui.gd" id="1_mmnkx"]
[ext_resource type="Texture2D" uid="uid://i7fyesnlgvgr" path="res://assets/bullets/ui pixel/00.png" id="2_k7cv3"]
[ext_resource type="Theme" uid="uid://qcd6164qa1bv" path="res://resources/text.tres" id="2_t765n"]
[ext_resource type="Theme" uid="uid://diel1g3cfv58k" path="res://resources/button_theme.tres" id="4_vcpxn"]

[node name="Main_ui" type="Control"]
layout_mode = 3
anchor_top = 0.901
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.96002
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmnkx")

[node name="BoxContainer" type="BoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -173.544
offset_bottom = 2.32007
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="NinePatchRect" parent="BoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_k7cv3")
region_rect = Rect2(128, 85, 48, 22)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="exp" type="MarginContainer" parent="BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MarginContainer/HBoxContainer/exp"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2_t765n")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/exp/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "Exp"

[node name="xp_label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/exp/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "asdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="atk_speed" type="MarginContainer" parent="BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MarginContainer/HBoxContainer/atk_speed"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2_t765n")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_speed/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "Atk per 
second"

[node name="Label2" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_speed/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "asdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="atk_dmg" type="MarginContainer" parent="BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MarginContainer/HBoxContainer/atk_dmg"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2_t765n")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_dmg/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "Atk dmg"

[node name="Label2" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_dmg/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "asdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="atk_range" type="MarginContainer" parent="BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MarginContainer/HBoxContainer/atk_range"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2_t765n")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_range/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "Atk range"

[node name="Label2" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/atk_range/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "asdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="enemy_level" type="MarginContainer" parent="BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MarginContainer/HBoxContainer/enemy_level"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2_t765n")
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/enemy_level/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "Enemy 
Level"

[node name="Label2" type="Label" parent="BoxContainer/MarginContainer/HBoxContainer/enemy_level/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t765n")
text = "asdas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = -110.32
offset_right = 680.0
offset_bottom = -73.3201
theme = ExtResource("4_vcpxn")
text = "Show stats"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
